--- a/cybersecurite.html
+++ b/cybersecurite.html
@@ -472,22 +472,22 @@
         <li>
           <a href="devis.html" class="nav-devis">
             Demander un devis
-            <span class="devis-icon"><i class="fas fa-paper-plane"></i></span>
+            <span class="devis-icon"></span>
           </a>
         </li>
       </ul>
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-shield-alt"></i> Formation Cybersécurité - Protection des Systèmes & Réseaux</div>
+    <div class="service-title">Formation Cybersécurité - Protection des Systèmes & Réseaux</div>
     <div class="service-intro">Vous souhaitez comprendre les menaces numériques, sécuriser vos données ou débuter une carrière dans la cybersécurité ? Ce parcours vous apporte les compétences essentielles.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-graduation-cap"></i> Maîtriser les bases de la cybersécurité</li>
-      <li><i class="fas fa-search"></i> Identifier et prévenir les cyber menaces</li>
-      <li><i class="fas fa-lock"></i> Sécuriser systèmes, réseaux et données</li>
-      <li><i class="fas fa-tools"></i> Utiliser des outils : Wireshark, Kali Linux, VPN, pare-feu</li>
-      <li><i class="fas fa-bug"></i> Réaliser des simulations et tests d'intrusion</li>
+      <li>Maîtriser les bases de la cybersécurité</li>
+      <li>Identifier et prévenir les cyber menaces</li>
+      <li>Sécuriser systèmes, réseaux et données</li>
+      <li>Utiliser des outils : Wireshark, Kali Linux, VPN, pare-feu</li>
+      <li>Réaliser des simulations et tests d'intrusion</li>
     </ul>
     <div class="service-section-title">Modules de formation</div>
     <ol class="service-steps">
@@ -539,9 +539,9 @@
     </ol>
     <div class="service-section-title" style="color:var(--vert);">Modalités de formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-clock"></i> Durée : 6 à 10 semaines</li>
-      <li><i class="fas fa-laptop"></i> En ligne / Présentiel / Hybride</li>
-      <li><i class="fas fa-certificate"></i> Certification délivrée après validation des projets</li>
+      <li>Durée : 6 à 10 semaines</li>
+      <li>En ligne / Présentiel / Hybride</li>
+      <li> Certification délivrée après validation des projets</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour vous inscrire à cette formation cybersécurité :<br>
@@ -596,7 +596,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
