--- a/impression_3D.html
+++ b/impression_3D.html
@@ -373,15 +373,15 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-print"></i> Formation Impression 3D - Modélisation & Fabrication</div>
+    <div class="service-title">Formation Impression 3D - Modélisation & Fabrication</div>
     <div class="service-intro">Vous souhaitez créer vos propres objets, pièces mécaniques ou prototypes grâce à l'impression 3D ? Ce parcours vous guide pas à pas, de la conception à la fabrication.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-cogs"></i> Comprendre le fonctionnement des imprimantes 3D</li>
-      <li><i class="fas fa-cube"></i> Maîtriser les logiciels de modélisation 3D</li>
-      <li><i class="fas fa-file-code"></i> Préparer des fichiers d'impression optimisés</li>
-      <li><i class="fas fa-tools"></i> Manipuler et entretenir une imprimante 3D</li>
-      <li><i class="fas fa-project-diagram"></i> Réaliser des projets personnalisés</li>
+      <li>Comprendre le fonctionnement des imprimantes 3D</li>
+      <li> Maîtriser les logiciels de modélisation 3D</li>
+      <li>Préparer des fichiers d'impression optimisés</li>
+      <li>Manipuler et entretenir une imprimante 3D</li>
+      <li>Réaliser des projets personnalisés</li>
     </ul>
     <div class="service-section-title">Modules de formation</div>
     <ol class="service-steps">
@@ -433,9 +433,9 @@
     </ol>
     <div class="service-section-title" style="color:var(--vert);">Modalités de formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-clock"></i> Durée : 4 à 8 semaines</li>
-      <li><i class="fas fa-laptop"></i> En ligne / Présentiel / Hybride</li>
-      <li><i class="fas fa-certificate"></i> Certification délivrée après validation des projets</li>
+      <li>Durée : 4 à 8 semaines</li>
+      <li>En ligne / Présentiel / Hybride</li>
+      <li>Certification délivrée après validation des projets</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour vous inscrire à cette formation impression 3D :<br>
