--- a/robotique.html
+++ b/robotique.html
@@ -348,15 +348,15 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-robot"></i> Formation Robotique - Conception & Programmation</div>
+    <div class="service-title"> Formation Robotique - Conception & Programmation</div>
     <div class="service-intro">Vous rêvez de construire un robot fonctionnel, de comprendre comment il perçoit son environnement et prend des décisions ? Ce parcours vous donne toutes les clés pour concrétiser vos idées, même si vous débutez.</div>
     <div class="service-section-title">Objectifs de la formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-cogs"></i> Bases de la robotique (composants, capteurs, moteurs...)</li>
-      <li><i class="fas fa-code"></i> Programmation (Arduino, Raspberry Pi, Micro Bit)</li>
-      <li><i class="fas fa-robot"></i> Conception de robots mobiles et bras manipulateurs</li>
-      <li><i class="fas fa-brain"></i> Algorithmes de navigation, détection, autonomie</li>
-      <li><i class="fas fa-project-diagram"></i> Projets concrets : suiveur de ligne, bras robotise, robot explorateur</li>
+      <li>Bases de la robotique (composants, capteurs, moteurs...)</li>
+      <li>Programmation (Arduino, Raspberry Pi, Micro Bit)</li>
+      <li>Conception de robots mobiles et bras manipulateurs</li>
+      <li>Algorithmes de navigation, détection, autonomie</li>
+      <li>Projets concrets : suiveur de ligne, bras robotise, robot explorateur</li>
     </ul>
     <div class="service-section-title">Modules de formation</div>
     <ol class="service-steps">
@@ -408,9 +408,9 @@
     </ol>
     <div class="service-section-title" style="color:var(--vert);">Modalités de formation</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-clock"></i> Durée : 6 à 10 semaines</li>
-      <li><i class="fas fa-laptop"></i> En ligne / Présentiel / Hybride</li>
-      <li><i class="fas fa-certificate"></i> Certification délivrée après validation des projets</li>
+      <li>Durée : 6 à 10 semaines</li>
+      <li>En ligne / Présentiel / Hybride</li>
+      <li>Certification délivrée après validation des projets</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour vous inscrire à cette formation robotique :<br>
