--- a/seo.html
+++ b/seo.html
@@ -413,12 +413,12 @@
       <li>Demandes de devis, contacts directs depuis le site</li>
       <li>Taux de conversion et retour sur investissement marketing (ROMI)</li>
     </ul>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Pourquoi choisir Porokhane Digital Consulting ?</div>
+    <div class="service-section-title" style="color:var(--vert);"> Pourquoi choisir Porokhane Digital Consulting ?</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-check-circle"></i> Méthode professionnelle éprouvée et agile</li>
-      <li><i class="fas fa-globe-africa"></i> Adaptation au contexte africain avec des standards internationaux</li>
-      <li><i class="fas fa-eye"></i> Transparence totale et reporting régulier</li>
-      <li><i class="fas fa-chart-line"></i> Résultats mesurables, visibles et durables</li>
+      <li>Méthode professionnelle éprouvée et agile</li>
+      <li>Adaptation au contexte africain avec des standards internationaux</li>
+      <li>Transparence totale et reporting régulier</li>
+      <li>Résultats mesurables, visibles et durables</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour booster votre visibilité avec le SEO :<br>
@@ -474,7 +474,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
