--- a/seo_outil.html
+++ b/seo_outil.html
@@ -349,11 +349,11 @@
   </nav>
 
   <main class="blog-main">
-    <div class="blog-title"><i class="fas fa-search"></i> Algorithme Google SEO 2024 : 10 astuces pour être visible</div>
+    <div class="blog-title">Algorithme Google SEO 2024 : 10 astuces pour être visible</div>
     <div class="blog-intro">Parmi les facteurs de classement utilisés par <strong>l'algorithme Google en 2024</strong>, on retrouve, en premier, la publication continue de contenus engageants. Une bonne nouvelle pour les sites internet qui accordent une grande importance à la valeur ajoutée de leurs pages et articles !</div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-brain"></i> 1. Adapter vos contenus à l'algorithme MUM de Google</h2>
+      <h2>1. Adapter vos contenus à l'algorithme MUM de Google</h2>
       <p>Google a commencé le déploiement de son algorithme MUM (Multitask Unified Model) depuis juin 2021. Plus performant que son prédécesseur BERT, son objectif est d'aider le moteur de recherche à répondre aux requêtes complexes des internautes grâce à l'Intelligence Artificielle.</p>
       <div class="blog-tip">
         <strong>Comment adapter vos contenus :</strong><br>
@@ -365,7 +365,7 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-microphone"></i> 2. Écrire pour la recherche vocale</h2>
+      <h2>2. Écrire pour la recherche vocale</h2>
       <p>L'algorithme Google version 2024 se dote d'un nouveau modèle de machine learning : LaMDA (Language Model for Dialogue Applications). Celui-ci veut explorer l'art de la conversation pour améliorer les requêtes envoyées suite à une recherche vocale.</p>
       <div class="blog-tip">
         <strong>Exemple :</strong> Au lieu de "chaussures de randonnées", utilisez "quelles sont les chaussures adaptées pour une randonnée de 3 jours en montagne ?"
@@ -373,7 +373,7 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-image"></i> 3. Optimiser le référencement des images</h2>
+      <h2>3. Optimiser le référencement des images</h2>
       <p>MUM est capable d'interpréter des images ou des vidéos pour fournir de meilleurs résultats aux internautes.</p>
       <div class="blog-tip">
         <strong>Pour plaire à l'algorithme Google en 2024 :</strong><br>
@@ -384,13 +384,13 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-heart"></i> 4. Introduire de l'empathie dans vos contenus</h2>
+      <h2>4. Introduire de l'empathie dans vos contenus</h2>
       <p>Derrière chaque requête se cache une personne réelle, motivée par un besoin et une émotion authentique. Votre contenu doit répondre à ce besoin pour apporter de la valeur ajoutée à l'internaute.</p>
       <div class="blog-quote">Anticipez les besoins de vos visiteurs et créez des contenus pour y répondre, simplement en faisant preuve d'empathie.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-lightbulb"></i> 5. Intégrer des accroches originales</h2>
+      <h2>5. Intégrer des accroches originales</h2>
       <p>Avec la quantité importante de contenus publiés régulièrement sur la toile, il est devenu difficile de trouver un article unique et précieux. Vous devez vous démarquer dans les résultats de recherche.</p>
       <div class="blog-tip">
         <strong>Comment être original :</strong><br>
@@ -401,13 +401,13 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-sitemap"></i> 6. Utiliser l'indexation sémantique latente (LSI)</h2>
+      <h2>6. Utiliser l'indexation sémantique latente (LSI)</h2>
       <p>L'indexation sémantique latente (LSI) a beaucoup évolué au cours de la dernière décennie. Vous devez inclure davantage de termes sémantiquement liés dans vos contenus.</p>
       <div class="blog-tip">Utilisez des synonymes ou d'autres variantes proches pour enrichir le vocabulaire de votre texte.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-link"></i> 7. Améliorer votre stratégie de maillage interne</h2>
+      <h2>7. Améliorer votre stratégie de maillage interne</h2>
       <p>Pour augmenter l'autorité de votre page web aux yeux de l'algorithme Google en 2024, continuez d'inclure des liens internes dans vos textes.</p>
       <div class="blog-tip">
         <strong>Stratégies de maillage interne :</strong><br>
@@ -418,7 +418,7 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-bullseye"></i> 8. Miser sur les mots-clés à double intention de recherche</h2>
+      <h2>8. Miser sur les mots-clés à double intention de recherche</h2>
       <p>Une même requête peut répondre à plusieurs intentions de recherche. C'est ce qu'on appelle un mot-clé à intention mixte ou double.</p>
       <div class="blog-tip">
         <strong>Pour avoir des sitelinks :</strong><br>
@@ -429,7 +429,7 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-star"></i> 9. Optimiser vos paragraphes pour les featured snippets</h2>
+      <h2> 9. Optimiser vos paragraphes pour les featured snippets</h2>
       <p>La majorité des featured snippets proposés par Google sont tirés de paragraphes de 40 à 50 mots. C'est également la longueur idéale pour conserver l'attention du lecteur.</p>
       <div class="blog-tip">
         <strong>Pour atteindre la position 0 :</strong><br>
@@ -440,12 +440,12 @@
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-chart-line"></i> 10. Veiller régulièrement sur les tendances SEO</h2>
+      <h2>10. Veiller régulièrement sur les tendances SEO</h2>
       <p>Les algorithmes de Google sont régulièrement modifiés. Il est donc essentiel de vous informer sur les innovations SEO, les modifications de l'algorithme et toutes les nouvelles techniques émergentes.</p>
     </div>
 
     <div class="blog-summary">
-      <h3><i class="fas fa-lightbulb"></i> Notre astuce pour connaître les évolutions SEO</h3>
+      <h3>Notre astuce pour connaître les évolutions SEO</h3>
       <p>La veille SEO est chronophage et peut s'avérer complexe si vous ne maîtrisez pas le langage inhérent au référencement. Mais Porokhane Digital vous accompagne à travers ses articles !</p>
       <div class="blog-quote">Depuis plus de 20 ans, une chose qui ne change pas, c'est de devoir rédiger du contenu de qualité pour référencer votre site internet.</div>
     </div>
@@ -459,16 +459,16 @@
     </div>
 
     <div class="blog-articles">
-      <h2><i class="fas fa-book"></i> Autres articles</h2>
+      <h2>Autres articles</h2>
 
       <div class="blog-article-item">
-        <div class="blog-article-title"><i class="fas fa-shield-alt"></i> Sécuriser son site WordPress</div>
+        <div class="blog-article-title">Sécuriser son site WordPress</div>
         <p>Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces.</p>
         <a class="blog-article-link" href="wordpress.html">Lire l'article →</a>
       </div>
 
       <div class="blog-article-item">
-        <div class="blog-article-title"><i class="fas fa-tools"></i> 14 outils SEO gratuits à tester</div>
+        <div class="blog-article-title">14 outils SEO gratuits à tester</div>
         <p>Les meilleurs outils pour trouver des mots-clés et analyser ton trafic.</p>
         <a class="blog-article-link" href="#">Lire l'article →</a>
       </div>
@@ -521,7 +521,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
