--- a/site.html
+++ b/site.html
@@ -370,13 +370,13 @@
     </div>
   </nav>
   <main class="service-main">
-    <div class="service-title"><i class="fas fa-laptop-code"></i> Création & Refonte de Sites Web</div>
+    <div class="service-title">Création & Refonte de Sites Web</div>
     <div class="service-intro">Pourquoi (re)penser votre site web&nbsp;?<br>Parce que votre site est votre première vitrine digitale. Qu’il s’agisse d’une création ou d’une refonte, nous réalisons des sites web modernes, performants et adaptés à vos objectifs métiers.</div>
-    <div class="service-section-title"><i class="fas fa-cogs"></i> Notre méthode&nbsp;: design stratégique, UX moderne & technologies fiables</div>
+    <div class="service-section-title"> Notre méthode&nbsp;: design stratégique, UX moderne & technologies fiables</div>
     <ol class="service-steps">
       <li class="service-step">
         <div class="service-step-num">1</div>
-        <div class="service-step-title"><i class="fas fa-search"></i> Audit ou définition du besoin</div>
+        <div class="service-step-title">Audit ou définition du besoin</div>
         <ul>
           <li>État des lieux de l’existant (dans le cas d’une refonte)</li>
           <li>Définition des cibles, objectifs et parcours utilisateur</li>
@@ -385,7 +385,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">2</div>
-        <div class="service-step-title"><i class="fas fa-pencil-ruler"></i> Design UX/UI & maquettes</div>
+        <div class="service-step-title"> Design UX/UI & maquettes</div>
         <ul>
           <li>Création d’une identité visuelle cohérente</li>
           <li>Maquettes responsives (mobile/tablette/desktop)</li>
@@ -394,7 +394,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">3</div>
-        <div class="service-step-title"><i class="fas fa-code"></i> Développement technique</div>
+        <div class="service-step-title">Développement technique</div>
         <ul>
           <li>Technologies adaptées (HTML/CSS/JS, WordPress, Laravel, etc.)</li>
           <li>Intégration optimisée (SEO, performance, accessibilité)</li>
@@ -403,7 +403,7 @@
       </li>
       <li class="service-step">
         <div class="service-step-num">4</div>
-        <div class="service-step-title"><i class="fas fa-rocket"></i> Mise en ligne & accompagnement</div>
+        <div class="service-step-title">Mise en ligne & accompagnement</div>
         <ul>
           <li>Formation à la gestion du site</li>
           <li>Support technique & mises à jour</li>
@@ -411,12 +411,12 @@
         </ul>
       </li>
     </ol>
-    <div class="service-section-title" style="color:var(--vert);"><i class="fas fa-star"></i> Ce qui rend nos sites uniques</div>
+    <div class="service-section-title" style="color:var(--vert);">Ce qui rend nos sites uniques</div>
     <ul class="service-unique-list">
-      <li><i class="fas fa-paint-brush"></i> Design sur mesure, sans thème préfabriqué</li>
-      <li><i class="fas fa-tachometer-alt"></i> Sites rapides, légers et optimisés pour le référencement</li>
-      <li><i class="fas fa-mouse-pointer"></i> Expérience utilisateur fluide et intuitive</li>
-      <li><i class="fas fa-hands-helping"></i> Accompagnement humain de bout en bout</li>
+      <li>Design sur mesure, sans thème préfabriqué</li>
+      <li>Sites rapides, légers et optimisés pour le référencement</li>
+      <li>Expérience utilisateur fluide et intuitive</li>
+      <li>Accompagnement humain de bout en bout</li>
     </ul>
     <div class="service-contact">
       <strong>Contact :</strong> Pour donner vie à votre site web&nbsp;:<br>
@@ -471,7 +471,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
