--- a/strategie_digitale.html
+++ b/strategie_digitale.html
@@ -504,12 +504,12 @@
   </nav>
 
   <main class="strategie-main">
-    <div class="strategie-title"><i class="fas fa-chess"></i> Notre Stratégie Digitale</div>
+    <div class="strategie-title">Notre Stratégie Digitale</div>
     <div class="strategie-intro">Chez Porokhane Digital Consulting, nous croyons qu’un bon marketing digital doit créer de la valeur, inspirer la confiance et produire des résultats mesurables. Inspirée des meilleures pratiques internationales, notre méthode est adaptée au contexte africain et repose sur 5 grandes étapes clés.</div>
     <div class="timeline">
       <div class="timeline-step">
         <div class="timeline-num">1</div>
-        <div class="timeline-icon"><i class="fas fa-search"></i></div>
+        <div class="timeline-icon"></div>
         <h3>Audit 360°</h3>
         <ul>
           <li>Analyse SEO technique et sémantique</li>
@@ -521,7 +521,7 @@
       </div>
       <div class="timeline-step">
         <div class="timeline-num">2</div>
-        <div class="timeline-icon"><i class="fas fa-users"></i></div>
+        <div class="timeline-icon"></div>
         <h3>Étude de marché et analyse de la cible</h3>
         <ul>
           <li>Analyse des tendances sectorielles (santé, distribution, numérique…)</li>
@@ -534,7 +534,7 @@
       </div>
       <div class="timeline-step">
         <div class="timeline-num">3</div>
-        <div class="timeline-icon"><i class="fas fa-bullseye"></i></div>
+        <div class="timeline-icon"></div>
         <h3>Stratégie digitale personnalisée</h3>
         <ul>
           <li>Optimisation SEO (site web, articles de blog, pages services)</li>
@@ -547,7 +547,7 @@
       </div>
       <div class="timeline-step">
         <div class="timeline-num">4</div>
-        <div class="timeline-icon"><i class="fas fa-rocket"></i></div>
+        <div class="timeline-icon"></div>
         <h3>Exécution agile et test continu</h3>
         <ul>
           <li>Déploiement rapide (sprints de 2 à 4 semaines)</li>
@@ -559,7 +559,7 @@
       </div>
       <div class="timeline-step">
         <div class="timeline-num">5</div>
-        <div class="timeline-icon"><i class="fas fa-sync-alt"></i></div>
+        <div class="timeline-icon"></div>
         <h3>Suivi et amélioration continue</h3>
         <ul>
           <li>Rapports mensuels détaillés</li>
@@ -570,20 +570,20 @@
         <p><strong>Objectif :</strong> garantir l’évolution constante de votre stratégie face aux changements du marché.</p>
       </div>
     </div>
-    <div class="strategie-section-title"><i class="fas fa-lightbulb"></i> Nos Domaines d’Expertise</div>
+    <div class="strategie-section-title">Nos Domaines d’Expertise</div>
     <ul class="strategie-list">
-      <li><i class="fas fa-search"></i> SEO & contenu optimisé</li>
-      <li><i class="fas fa-bullhorn"></i> Campagnes Google Ads & Social Ads</li>
-      <li><i class="fas fa-envelope"></i> Email marketing & CRM intelligent</li>
-      <li><i class="fas fa-user-check"></i> UX design & optimisation du parcours client</li>
-      <li><i class="fas fa-users"></i> Community management & ligne éditoriale sur mesure</li>
+      <li> SEO & contenu optimisé</li>
+      <li>Campagnes Google Ads & Social Ads</li>
+      <li>Email marketing & CRM intelligent</li>
+      <li>UX design & optimisation du parcours client</li>
+      <li>Community management & ligne éditoriale sur mesure</li>
     </ul>
-    <div class="strategie-section-title"><i class="fas fa-star"></i> Ce qui nous distingue</div>
+    <div class="strategie-section-title">Ce qui nous distingue</div>
     <ul class="strategie-list">
-      <li><i class="fas fa-globe-africa"></i> Une approche terrain combinée à des standards internationaux</li>
-      <li><i class="fas fa-check-circle"></i> Des solutions accessibles, concrètes et mesurables</li>
-      <li><i class="fas fa-user-friends"></i> Un accompagnement humain et pédagogique</li>
-      <li><i class="fas fa-bullseye"></i> Un objectif clair : votre autonomie digitale et vos résultats commerciaux</li>
+      <li>Une approche terrain combinée à des standards internationaux</li>
+      <li>Des solutions accessibles, concrètes et mesurables</li>
+      <li>Un accompagnement humain et pédagogique</li>
+      <li>Un objectif clair : votre autonomie digitale et vos résultats commerciaux</li>
     </ul>
     <div class="strategie-contact">
       <strong>Contact :</strong> Pour un diagnostic gratuit de votre stratégie digitale :<br>
@@ -639,7 +639,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
