--- a/wordpress.html
+++ b/wordpress.html
@@ -351,87 +351,87 @@
   </nav>
 
   <main class="blog-main">
-    <div class="blog-title"><i class="fas fa-shield-alt"></i> Sécuriser son site WordPress</div>
+    <div class="blog-title">Sécuriser son site WordPress</div>
     <div class="blog-intro"><strong>Protégez votre site WordPress contre les piratages</strong> avec 10 conseils simples et efficaces, accessibles à tous.</div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-rocket"></i> 10 conseils indispensables</h2>
+      <h2>10 conseils indispensables</h2>
       <p>WordPress est populaire, mais donc visé. Voici les 10 pratiques essentielles pour assurer votre tranquillité.</p>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-sync-alt"></i> 1. Gardez tout à jour</h2>
+      <h2> 1. Gardez tout à jour</h2>
       <p>Mettez plugins, thèmes, et WordPress à jour. C'est vital.</p>
-      <div class="blog-tip">👉 Utilisez les mises à jour automatiques ou <em>ManageWP</em>.</div>
+      <div class="blog-tip"> Utilisez les mises à jour automatiques ou <em>ManageWP</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-user-shield"></i> 2. Changez l'URL de connexion</h2>
+      <h2> 2. Changez l'URL de connexion</h2>
       <p>Ne laissez pas <span class="blog-code">/wp-admin</span> visible à tous.</p>
-      <div class="blog-tip">👉 Utilisez <em>WPS Hide Login</em>.</div>
+      <div class="blog-tip">Utilisez <em>WPS Hide Login</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-lock"></i> 3. Mots de passe forts & 2FA</h2>
+      <h2> 3. Mots de passe forts & 2FA</h2>
       <p>Un mot de passe fort + 2FA = sécurité renforcée.</p>
-      <div class="blog-tip">👉 Plugins : <em>Google Authenticator</em>, <em>WP 2FA</em>.</div>
+      <div class="blog-tip"> Plugins : <em>Google Authenticator</em>, <em>WP 2FA</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-shield-alt"></i> 4. Limitez les tentatives</h2>
+      <h2>4. Limitez les tentatives</h2>
       <p>Empêchez les attaques par force brute.</p>
-      <div class="blog-tip">👉 Installez <em>Limit Login Attempts Reloaded</em>.</div>
+      <div class="blog-tip"> Installez <em>Limit Login Attempts Reloaded</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-trash"></i> 5. Supprimez les plugins inutilisés</h2>
+      <h2> 5. Supprimez les plugins inutilisés</h2>
       <p>Ne gardez que ce que vous utilisez.</p>
-      <div class="blog-tip">👉 Supprimez les extensions inactives.</div>
+      <div class="blog-tip"> Supprimez les extensions inactives.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-search"></i> 6. Analysez régulièrement</h2>
+      <h2>6. Analysez régulièrement</h2>
       <p>Scannez pour détecter des fichiers suspects.</p>
-      <div class="blog-tip">👉 Plugins : <em>Wordfence</em>, <em>Sucuri</em>.</div>
+      <div class="blog-tip"> Plugins : <em>Wordfence</em>, <em>Sucuri</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-database"></i> 7. Changez le préfixe des tables</h2>
+      <h2> 7. Changez le préfixe des tables</h2>
       <p>Ne laissez pas <span class="blog-code">wp_</span> comme préfixe.</p>
-      <div class="blog-tip">👉 Changez-le à l'installation ou via plugin.</div>
+      <div class="blog-tip"> Changez-le à l'installation ou via plugin.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-fire"></i> 8. Activez un pare-feu</h2>
+      <h2> 8. Activez un pare-feu</h2>
       <p>Filtrez les attaques en amont.</p>
-      <div class="blog-tip">👉 <em>Cloudflare</em> ou <em>Wordfence Premium</em>.</div>
+      <div class="blog-tip"><em>Cloudflare</em> ou <em>Wordfence Premium</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-save"></i> 9. Sauvegardes régulières</h2>
+      <h2> 9. Sauvegardes régulières</h2>
       <p>Créez des sauvegardes automatiques.</p>
-      <div class="blog-tip">👉 Plugins : <em>UpdraftPlus</em>, <em>BlogVault</em>.</div>
+      <div class="blog-tip"> Plugins : <em>UpdraftPlus</em>, <em>BlogVault</em>.</div>
     </div>
 
     <div class="blog-section">
-      <h2><i class="fas fa-eye-slash"></i> 10. Cachez la version WordPress</h2>
+      <h2>10. Cachez la version WordPress</h2>
       <p>Évitez de révéler la version du CMS.</p>
-      <div class="blog-tip">👉 Supprimez dans <span class="blog-code">functions.php</span> : <span class="blog-code">remove_action('wp_head', 'wp_generator');</span></div>
+      <div class="blog-tip"> Supprimez dans <span class="blog-code">functions.php</span> : <span class="blog-code">remove_action('wp_head', 'wp_generator');</span></div>
     </div>
 
     <div class="blog-bonus">
-      <h3><i class="fas fa-gift"></i> Bonus</h3>
+      <h3>Bonus</h3>
       <p>Plugins sécurité tout-en-un : <strong>Wordfence</strong> ou <strong>iThemes Security</strong>.</p>
     </div>
 
     <div class="blog-summary">
-      <h3><i class="fas fa-brain"></i> En résumé</h3>
+      <h3>En résumé</h3>
       <p>Ne laissez pas votre site sans défense. Appliquez ces conseils et sécurisez-le dès aujourd'hui.</p>
       <div class="blog-quote">Un site piraté, c'est du stress. Un site protégé, c'est la sérénité.</div>
     </div>
 
     <div class="blog-section">
-      <h3><i class="fas fa-comments"></i> Et vous ? Partagez vos astuces WordPress en commentaire 👇</h3>
+      <h3> Et vous ? Partagez vos astuces WordPress en commentaire </h3>
     </div>
 
     <div class="blog-hashtags">
@@ -443,16 +443,16 @@
     </div>
 
     <div class="blog-articles">
-      <h2><i class="fas fa-book"></i> Autres articles</h2>
+      <h2>Autres articles</h2>
 
       <div class="blog-article-item">
-        <div class="blog-article-title"><i class="fas fa-rocket"></i> SEO Google 2024 : 10 astuces à connaître</div>
+        <div class="blog-article-title">SEO Google 2024 : 10 astuces à connaître</div>
         <p>Les dernières tendances SEO expliquées simplement pour booster ton site.</p>
         <a class="blog-article-link" href="visible_seo.html">Lire l'article →</a>
       </div>
 
       <div class="blog-article-item">
-        <div class="blog-article-title"><i class="fas fa-search"></i> 14 outils SEO gratuits à tester</div>
+        <div class="blog-article-title">14 outils SEO gratuits à tester</div>
         <p>Les meilleurs outils pour trouver des mots-clés et analyser ton trafic.</p>
         <a class="blog-article-link" href="seo_outil.html">Lire l'article →</a>
       </div>
@@ -463,7 +463,7 @@
   <footer class="footer">
     <form class="newsletter" id="newsletterForm">
         <input type="email" name="newsletterEmail" placeholder="Votre email pour recevoir nos conseils et actualités" required>
-        <button type="submit"><i class="fas fa-envelope"></i> S'inscrire</button>
+        <button type="submit"> S'inscrire</button>
       </form>
     </br>
     <div class="container">
@@ -505,7 +505,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
