--- a/index.html
+++ b/index.html
@@ -1665,12 +1665,8 @@
 .services-section, .hero, .services-section {
   background-size: cover !important;
   background-position: center !important;
-  width: 100vw !important;
+  width: 100% !important;
   position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
   box-sizing: border-box;
 }
 
@@ -2756,23 +2752,23 @@
 
     @keyframes newsletterFloat {
       0% {
-        transform: translateX(-30px) scale(1);
+        transform: translateX(-15px) scale(1);
         box-shadow: 0 4px 20px rgba(31, 164, 122, 0.15);
       }
       25% {
-        transform: translateX(-10px) scale(1.02);
+        transform: translateX(-5px) scale(1.02);
         box-shadow: 0 6px 25px rgba(31, 164, 122, 0.2);
       }
       50% {
-        transform: translateX(30px) scale(1.05);
+        transform: translateX(15px) scale(1.05);
         box-shadow: 0 10px 35px rgba(31, 164, 122, 0.3);
       }
       75% {
-        transform: translateX(10px) scale(1.02);
+        transform: translateX(5px) scale(1.02);
         box-shadow: 0 6px 25px rgba(31, 164, 122, 0.2);
       }
       100% {
-        transform: translateX(-30px) scale(1);
+        transform: translateX(-15px) scale(1);
         box-shadow: 0 4px 20px rgba(31, 164, 122, 0.15);
       }
     }
