--- a/a-propos.html
+++ b/a-propos.html
@@ -1273,7 +1273,7 @@
   <section class="hero-banner">
     <div class="container">
       <h1>Vers l'excellence digitale en Afrique</h1>
-      <p>Porokhane Digital Consulting propulse les organisations sénégalaises et africaines par l'innovation, la qualité et l'humain. Découvrez notre vision, nos valeurs et notre équipe.</p>
+      <p>Porokhane Digital Consulting propulse les organisations sénégalaises et africaines par l'innovation. Découvrez notre vision, nos valeurs et notre équipe.</p>
     </div>
   </section>
 
