--- a/erp.html
+++ b/erp.html
@@ -425,7 +425,7 @@
     <div class="service-contact">
       <strong>Contact :</strong> Pour optimiser la gestion de votre entreprise avec un ERP performant :<br>
       <strong>Email :</strong> <a href="mailto:responsable.marketing@digital-porokhane.com">responsable.marketing@digital-porokhane.com</a><br>
-      <strong>Téléphone :</strong> <a href="tel:+221776125660">+221 77 612 56 60</a><br>
+      <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a><br>
       <strong>Site web :</strong> <a href="https://www.porokhane.digital" target="_blank">www.porokhane.digital</a>
     </div>
   </main>
@@ -475,7 +475,7 @@
         <div class="footer-section">
           <h4>Contact</h4>
           <ul>
-            <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
+            <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
             <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
