--- a/devis.html
+++ b/devis.html
@@ -1834,7 +1834,7 @@
         <div class="footer-section">
           <h4>Contact</h4>
           <ul>
-            <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
+            <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
             <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
