--- a/index.html
+++ b/index.html
@@ -1952,7 +1952,7 @@
     <div class="container nav-container">
       <div class="nav-logo">
         <a href="index.html">
-          <img src="logo.png" alt="Porokhane Digital Consulting Logo">
+          <img src="Logo.png" alt="Porokhane Digital Consulting Logo">
         </a>
       </div>
       
