--- a/index.html
+++ b/index.html
@@ -1952,7 +1952,7 @@
     <div class="container nav-container">
       <div class="nav-logo">
         <a href="index.html">
-          <img src="Logo.png" alt="Porokhane Digital Consulting Logo">
+          <img src="Logo.png" alt="Porokhane Digital Consulting  Logo">
         </a>
       </div>
       
@@ -2377,7 +2377,7 @@
   
   
   
-  <!-- Témoignages carrousel -->
+  <!-- Témoignages carrousel
   <section id="temoignages" class="temoignages-section">
     <div class="container">
       <div class="section-header">
@@ -2409,6 +2409,8 @@
       </div>
     </div>
   </section>
+
+  -->
 
 
   <!-- Ajoutez cette section après la section Blog et avant la section Devis -->
