--- a/contact.html
+++ b/contact.html
@@ -1091,7 +1091,11 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h3>Porokhane Digital</h3>
+           <div class="nav-logo">
+        <a href="index.html">
+          <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
+        </a>
+      </div>
           <p>Votre partenaire de confiance pour la transformation digitale. Nous créons des solutions innovantes qui propulsent votre entreprise vers le succès.</p>
           <div class="social-links">
             <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
