--- a/a-propos.html
+++ b/a-propos.html
@@ -1206,7 +1206,183 @@
     height: 70px;
   }
 }
+
+
+
+    .chatbot-btn {
+      position: fixed;
+      bottom: 32px;
+      right: 32px;
+      background: linear-gradient(90deg, var(--vert), var(--bleu));
+      color: var(--blanc);
+      border: none;
+      border-radius: 50%;
+      width: 64px;
+      height: 64px;
+      box-shadow: 0 4px 24px rgba(31,164,122,0.18);
+      font-size: 2.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      z-index: 9999;
+      transition: background 0.3s, transform 0.2s;
+      animation: chatbot-bounce 1.5s infinite alternate;
+    }
+    .chatbot-btn:hover {
+      background: linear-gradient(90deg, var(--bleu), var(--vert));
+      transform: scale(1.08);
+    }
+    @keyframes chatbot-bounce {
+      0% { box-shadow: 0 4px 24px rgba(31,164,122,0.18); transform: scale(1); }
+      100% { box-shadow: 0 8px 32px rgba(37,99,235,0.18); transform: scale(1.08); }
+    }
+    .chatbot-btn .fa-comments {
+      font-size: 2.2rem;
+      animation: chatbot-icon-wave 2.5s infinite;
+    }
+    @keyframes chatbot-icon-wave {
+      0%, 100% { color: var(--blanc); transform: scale(1); }
+      50% { color: var(--vert); transform: scale(1.18) rotate(-8deg); }
+    }
+    .chatbot-window {
+      position: fixed;
+      bottom: 110px;
+      right: 32px;
+      width: 340px;
+      max-width: 95vw;
+      background: var(--blanc);
+      border-radius: 20px;
+      box-shadow: 0 8px 32px rgba(37,99,235,0.18);
+      border: 1.5px solid var(--vert);
+      z-index: 9999;
+      display: none;
+      flex-direction: column;
+      overflow: hidden;
+      animation: fadeInUp 0.4s;
+    }
+    .chatbot-header {
+      background: linear-gradient(90deg, var(--vert), var(--bleu));
+      color: var(--blanc);
+      padding: 1rem 1.2rem;
+      font-weight: 700;
+      font-size: 1.1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .chatbot-close {
+      background: none;
+      border: none;
+      color: var(--blanc);
+      font-size: 1.3rem;
+      cursor: pointer;
+      margin-left: 1rem;
+      transition: color 0.2s;
+    }
+    .chatbot-close:hover {
+      color: #e67e22;
+    }
+    .chatbot-body {
+      padding: 1.2rem;
+      background: var(--gris);
+      min-height: 180px;
+      max-height: 320px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .chatbot-message {
+      background: var(--blanc);
+      border-radius: 14px 14px 14px 4px;
+      padding: 0.8rem 1rem;
+      color: var(--gris-titre);
+      font-size: 1rem;
+      box-shadow: 0 2px 8px rgba(31,164,122,0.07);
+      align-self: flex-start;
+      max-width: 85%;
+    }
+    .chatbot-message.user {
+      background: var(--vert);
+      color: var(--blanc);
+      align-self: flex-end;
+      border-radius: 14px 14px 4px 14px;
+    }
+    .chatbot-suggestions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+    }
+    .chatbot-suggestion {
+      background: var(--bleu-clair);
+      color: var(--bleu);
+      border: none;
+      border-radius: 20px;
+      padding: 0.4rem 1rem;
+      font-size: 0.95rem;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .chatbot-suggestion:hover {
+      background: var(--bleu);
+      color: var(--blanc);
+    }
+    .chatbot-footer {
+      padding: 0.8rem 1.2rem;
+      background: var(--blanc);
+      border-top: 1px solid var(--gris-fonce);
+      display: flex;
+      gap: 0.5rem;
+    }
+    .chatbot-input {
+      flex: 1;
+      border: 1px solid var(--gris-fonce);
+      border-radius: 20px;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      outline: none;
+      transition: border 0.2s;
+    }
+    .chatbot-input:focus {
+      border-color: var(--vert);
+    }
+    .chatbot-send {
+      background: linear-gradient(90deg, var(--vert), var(--bleu));
+      color: var(--blanc);
+      border: none;
+      border-radius: 50%;
+      width: 38px;
+      height: 38px;
+      font-size: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .chatbot-send:hover {
+      background: linear-gradient(90deg, var(--bleu), var(--vert));
+    }
+
+    .chatbot-message.bot {
+      display: flex;
+      align-items: flex-start;
+      gap: 0.7rem;
+    }
+    .chatbot-avatar {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 2px 8px rgba(31,164,122,0.07);
+      border: 2px solid var(--vert);
+      flex-shrink: 0;
+    }
   </style>
+
+  
 </head>
 <body>
   <!-- Navigation -->
@@ -1589,6 +1765,36 @@
   </div>
 </footer>
 
+<!-- Bouton flottant -->
+  <button class="chatbot-btn" id="chatbotBtn" aria-label="Ouvrir le chat" title="Discuter avec nous">
+    <i class="fas fa-comments"></i>
+  </button>
+
+  <!-- Fenêtre du chatbot -->
+  <div class="chatbot-window" id="chatbotWindow">
+    <div class="chatbot-header">
+      <span>🤖 Porokhane Chatbot</span>
+      <button class="chatbot-close" id="chatbotClose" aria-label="Fermer le chat">&times;</button>
+    </div>
+    <div class="chatbot-body" id="chatbotBody">
+      <div class="chatbot-message">Bonjour 👋 ! Je suis le chatbot Porokhane. Posez-moi vos questions ou choisissez une suggestion ci-dessous :</div>
+      <div class="chatbot-message" style="background: var(--bleu-clair); color: var(--bleu); font-size: 0.98rem;">
+        Vous pouvez aussi envoyer ici un message à notre équipe, nous vous répondrons rapidement !
+      </div>
+      <div class="chatbot-suggestions" id="chatbotSuggestions">
+        <button class="chatbot-suggestion">Quels services proposez-vous ?</button>
+        <button class="chatbot-suggestion">Comment demander un devis ?</button>
+        <button class="chatbot-suggestion">Quels sont vos délais de livraison ?</button>
+        <button class="chatbot-suggestion">Proposez-vous des formations ?</button>
+        <button class="chatbot-suggestion">Comment vous contacter ?</button>
+      </div>
+    </div>
+    <form class="chatbot-footer" id="chatbotForm" autocomplete="off">
+      <input type="text" class="chatbot-input" id="chatbotInput" placeholder="Écrivez votre question..." />
+      <button type="submit" class="chatbot-send" aria-label="Envoyer"><i class="fas fa-paper-plane"></i></button>
+    </form>
+  </div>
+
   <script>
     // Animation compteur pour les chiffres clés
     document.addEventListener('DOMContentLoaded', function() {
@@ -1759,6 +1965,82 @@ document.addEventListener('DOMContentLoaded', function() {
     });
   }
 });
+
+
+
+// Réponses automatiques (FAQ)
+  const chatbotFAQ = {
+    'services': "Nous proposons : formations (robotique, impression 3D, cybersécurité), marketing digital, accompagnement (automatisation, IA, bases de données), développement web mobile et plus encore !",
+    'devis': "Pour demander un devis, cliquez sur 'Demander un devis' dans le menu ou rendez-vous sur la page devis. Nous vous répondrons rapidement !",
+    'délais': "Nos délais varient selon le projet, mais nous nous engageons à livrer dans les temps convenus, avec un suivi régulier.",
+    'formations': "Oui, nous proposons des formations en robotique, impression 3D, cybersécurité et plus. Consultez la page Formations pour plus d'infos !",
+    'contacter': "Vous pouvez nous contacter via la page Contact, par téléphone ou par email. Nous sommes à votre écoute !",
+    'salutation': "Bonjour et bienvenue chez Porokhane Digital Consulting ! 👋\n\nJe peux répondre à vos questions sur :\n• Nos services\n• Comment demander un devis\n• Nos délais de livraison\n• Nos formations\n• Comment nous contacter\n\nCliquez sur une suggestion ou posez votre question !"
+  };
+
+  const chatbotBtn = document.getElementById('chatbotBtn');
+  const chatbotWindow = document.getElementById('chatbotWindow');
+  const chatbotClose = document.getElementById('chatbotClose');
+  const chatbotBody = document.getElementById('chatbotBody');
+  const chatbotForm = document.getElementById('chatbotForm');
+  const chatbotInput = document.getElementById('chatbotInput');
+  const chatbotSuggestions = document.getElementById('chatbotSuggestions');
+
+  chatbotBtn.onclick = () => {
+    chatbotWindow.style.display = 'flex';
+    setTimeout(() => chatbotInput.focus(), 300);
+  };
+  chatbotClose.onclick = () => {
+    chatbotWindow.style.display = 'none';
+  };
+
+  // Suggestions cliquables
+  chatbotSuggestions.onclick = function(e) {
+    if (e.target.classList.contains('chatbot-suggestion')) {
+      const question = e.target.textContent;
+      addUserMessage(question);
+      respondToUser(question);
+    }
+  };
+
+  // Envoi du formulaire
+  chatbotForm.onsubmit = function(e) {
+    e.preventDefault();
+    const question = chatbotInput.value.trim();
+    if (question) {
+      addUserMessage(question);
+      respondToUser(question);
+      chatbotInput.value = '';
+    }
+  };
+
+  function addUserMessage(text) {
+    const msg = document.createElement('div');
+    msg.className = 'chatbot-message user';
+    msg.textContent = text;
+    chatbotBody.appendChild(msg);
+    chatbotBody.scrollTop = chatbotBody.scrollHeight;
+  }
+
+  function addBotMessage(text) {
+    const msg = document.createElement('div');
+    msg.className = 'chatbot-message';
+    msg.textContent = text;
+    chatbotBody.appendChild(msg);
+    chatbotBody.scrollTop = chatbotBody.scrollHeight;
+  }
+
+  function respondToUser(question) {
+    let response = "Je suis désolé, je n'ai pas compris votre question. Essayez une des suggestions ci-dessus ou contactez-nous directement.";
+    const q = question.toLowerCase();
+    if (q.includes('service')) response = chatbotFAQ['services'];
+    else if (q.includes('devis')) response = chatbotFAQ['devis'];
+    else if (q.includes('délai') || q.includes('delai')) response = chatbotFAQ['délais'];
+    else if (q.includes('formation')) response = chatbotFAQ['formations'];
+    else if (q.includes('contact')) response = chatbotFAQ['contacter'];
+    else if (q.includes('salut') || q.includes('bonjour') || q.includes('bonsoir') || q.includes('hello')) response = chatbotFAQ['salutation'];
+    setTimeout(() => addBotMessage(response), 600);
+  }
   </script>
 
   
