--- a/index.html
+++ b/index.html
@@ -2435,7 +2435,7 @@
       <!-- Projet 2 -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column;">
         <div class="realisation-img" style="height: 200px; overflow: hidden;">
-          <img src="MDD/Roulante.png" alt="Collaboration marketing digital équipe sénégalaise" style="width: 100%; height: 100%; object-fit: cover;">
+          <img src="MDD/MUCOSITE.png" alt="Collaboration marketing digital équipe sénégalaise" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--bleu); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de Medical Distribution</h3>
@@ -2446,12 +2446,12 @@
       <!-- Projet 3 -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(37,99,235,0.08); overflow: hidden; display: flex; flex-direction: column;">
         <div class="realisation-img" style="height: 200px; overflow: hidden;">
-          <img src="mo.png" alt="Témoignage client Porokhane">
+          <img src="pro-mo.png" alt="Témoignage client Porokhane">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MonTransfert</h3>
           <p style="color: var(--gris-texte); flex: 1;">Conception de supports digitaux, articles et vidéos pour renforcer la notoriété et l'engagement autour de MonTransfert.</p>
-          <a href="pro-mo.png" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
+          <a href="mo.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
     </div>
